compiler/testData/diagnostics/tests/cast/IsErasedTasT.kt
fun <T> testing(a: T) = a is <!CANNOT_CHECK_FOR_ERASED!>T<!>
